@@ -11,13 +11,14 @@ import co.javeriana.dw.organizapp.repository.NodeRepository;
 import co.javeriana.dw.organizapp.repository.ProcessVersionRepository;
 import co.javeriana.dw.organizapp.service.FlowService;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class FlowServiceImpl implements FlowService {
+
+    private static final String FLOW_NOT_FOUND_MESSAGE = "Flujo no encontrado con ID: ";
 
     private final FlowRepository flowRepository;
     private final ProcessVersionRepository processVersionRepository;
@@ -40,7 +41,7 @@ public class FlowServiceImpl implements FlowService {
     public List<FlowResponseDto> findAll() {
         return flowRepository.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -49,14 +50,14 @@ public class FlowServiceImpl implements FlowService {
         findVersion(versionId);
         return flowRepository.findByVersionId(versionId).stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public FlowResponseDto findById(Long id) {
         Flow flow = flowRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Flujo no encontrado con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(FLOW_NOT_FOUND_MESSAGE + id));
         return toDto(flow);
     }
 
@@ -80,7 +81,7 @@ public class FlowServiceImpl implements FlowService {
     @Transactional
     public FlowResponseDto update(Long id, FlowRequestDto flowDto) {
         Flow existingFlow = flowRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Flujo no encontrado con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(FLOW_NOT_FOUND_MESSAGE + id));
         ProcessVersion version = findVersion(flowDto.getVersionId());
         Node originNode = findNode(flowDto.getOriginNodeId());
         Node destinationNode = findNode(flowDto.getDestinationNodeId());
@@ -99,7 +100,7 @@ public class FlowServiceImpl implements FlowService {
     @Transactional
     public void delete(Long id) {
         Flow flow = flowRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Flujo no encontrado con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(FLOW_NOT_FOUND_MESSAGE + id));
         flowRepository.delete(flow);
     }
 
